<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/login_backgroud"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/durusapp_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />


    <LinearLayout
        android:id="@+id/ll_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/white_rectangle_transparent"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.13999999">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_user" />

        <EditText
            android:layout_marginRight="4dp"
            android:background="@null"
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:gravity="center|right"
            android:layout_height="match_parent"
            android:fontFamily="@font/sultan_normal"
            android:hint="@string/enter_username"
            android:textColor="@color/blue_main"
            android:textColorHint="@color/blue_main"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_pasword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/white_rectangle_transparent"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_username"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="12dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_password" />

        <EditText
            android:layout_marginRight="4dp"
            android:inputType="numberPassword"
            android:background="@null"
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:fontFamily="@font/sultan_normal"
            android:hint="@string/enter_password"
            android:textColor="@color/blue_main"
            android:textColorHint="@color/blue_main"
            android:textSize="16sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_no_account"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_color"
        android:text="@string/dont_have_account"
        android:fontFamily="@font/sultan_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/ll_username"
        app:layout_constraintTop_toBottomOf="@+id/ll_pasword" />


    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_margin="32dp"
        android:background="@drawable/golden_rectangle_rounded_coners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_pasword"
        android:layout_height="50dp">

        <TextView
           android:gravity="center"
            android:textColor="@color/blue_main"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="18sp"
            android:text="@string/login"
            android:fontFamily="@font/sultan_bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>