<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/login_backgroud"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.SignUpActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/durusapp_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />


    <LinearLayout
        android:id="@+id/ll_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:background="@drawable/white_rectangle_transparent"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_phone_number"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_phone" />

        <EditText
            android:layout_marginRight="4dp"
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:fontFamily="@font/sultan_normal"
            android:gravity="center|right"
            android:hint="@string/enter_username"
            android:textColor="@color/blue_main"
            android:textColorHint="@color/blue_main"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_pasword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/white_rectangle_transparent"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_username"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="12dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_password" />

        <EditText
            android:layout_marginRight="4dp"
            android:inputType="numberPassword"
            android:background="@null"
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:fontFamily="@font/sultan_normal"
            android:hint="@string/enter_password"
            android:textColor="@color/blue_main"
            android:textColorHint="@color/blue_main"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_confirm_pasword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:background="@drawable/white_rectangle_transparent"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_pasword">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_confirm_pass" />

        <EditText
            android:layout_marginRight="4dp"
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:fontFamily="@font/sultan_normal"
            android:gravity="center|right"
            android:hint="@string/confirm_password"
            android:inputType="numberPassword"
            android:textColor="@color/blue_main"
            android:textColorHint="@color/blue_main"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_phone_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="12dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/white_rectangle_transparent"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.02">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_user" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:background="@null"
            android:fontFamily="@font/sultan_normal"
            android:gravity="center|right"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:textColor="@color/blue_main"
            android:textColorHint="@color/blue_main"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sign_up"
        android:layout_width="match_parent"
        android:layout_margin="32dp"
        android:background="@drawable/golden_rectangle_rounded_coners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_pasword"
        android:layout_height="50dp">

        <TextView
            android:gravity="center"
            android:textColor="@color/blue_main"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="18sp"
            android:text="@string/new_registration"
            android:fontFamily="@font/sultan_bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>